big clean up jusqu'a msgbd